Fix jump links. Add hosting link. Add navbar js

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -83,3 +83,11 @@ hr {
   padding-bottom: 0 !important;
   padding-top: 0 !important;
 }
+
+// this fixes interal link jumping
+.anchor {
+  display: block; 
+  margin-top: -60px; 
+  height: 60px; 
+  visibility: hidden; 
+}
